* o_dbm.rb: RCS Rev1.2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Nov 11 01:24:41 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
+
+	* o_dbm.rb: RCS Rev1.2
+
 Thu Nov 11 01:01:54 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
 
 	* o_dbm.rb: first version
