* o_dbm.rb: RCS Rev1.6

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Thu Nov 11 01:29:41 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
+
+  	* o_dbm.rb: RCS Rev1.6
+
+Thu Nov 11 01:27:17 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
+
+	* o_dbm.rb: RCS Rev1.5
+
 Thu Nov 11 01:26:26 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
 
 	* o_dbm.rb: RCS Rev1.4
