--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Nov 11 01:30:52 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
+
+	* o_dbm.rb: RCS Rev1.8
+
 Thu Nov 11 01:30:20 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
 
 	* o_dbm.rb: RCS Rev1.7
