--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Nov 11 13:48:49 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
+
+	* Makefile README.jp, TODO, test-o_dbm.rb: 追加
+	* o_dbm.rb: 旧版最終版
+
 Thu Nov 11 01:31:45 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
 
 	* o_dbm.rb: RCS Rev1.9
