--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Nov 11 17:42:14 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
+
+	* o_dbm.gemspec: ちょっと修正
+
 Thu Nov 11 14:19:15 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
 
 	* o_dbm.rb: エンコーディングをutf-8に変更
